Continued with Documentation of new endpoints
